kubernetes/apps/ai/litellm/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: litellm
  labels:
    app.kubernetes.io/name: litellm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: litellm
  ports:
    - name: http
      port: 4000
      targetPort: http
